2020-02-10  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el (devbook-mode): Make nxml-child-indent local
	in the current buffer.

2020-02-08  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el: New file. Major mode for editing the
	Gentoo Devmanual, derived mode of nxml-mode.
	* ebuild-mode.texi (devbook-mode): Document it.
	* Makefile (DISTFILES): Add devbook-mode.el.

2019-12-21  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.49 released.

	* ebuild-mode-keywords.el
	(ebuild-mode-keywords-eclass-deprecated): Add elisp-need-emacs.
	(ebuild-mode-keywords-*): Regenerated.

2019-12-11  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.48 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* glep-mode.el (glep-mode-insert-skeleton): Update template to use
	the CC-BY-SA-4.0 license, following the change in GLEP 2.

2019-07-28  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.47 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2018-09-17  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.46 released.

2018-09-16  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-update-copyright)
	(ebuild-mode-insert-skeleton): Use UTC to avoid flapping.

	* ebuild-mode.el (ebuild-mode-update-copyright): Extend function
	and custom variable to control whether copyright year or author
	are updated.
	(ebuild-mode-copyright-regexp): Allow for a single year rather
	than a range of years. Match authors in an additional group.
	(ebuild-mode-insert-skeleton): New default year and authors.

2018-09-04  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.45 released.

	* ebuild-mode.el (ebuild-mode-arch-list): Add arm64 to default.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2018-08-30  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-portdir): Default to
	/var/db/repos/gentoo with fallback to /usr/portage, bug 662998.

2018-06-23  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.44 released.
